--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,10 @@
 [theme]
 base="light"
+primaryColor="#0E1117"
+backgroundColor="#FFFFFF"
+secondaryBackgroundColor="#F0F2F6"
+textColor="#000000"
+
 
 [browser]
 gatherUsageStats = false
@@ -10,3 +15,4 @@ enableXsrfProtection = true
 
 [ui]
 hideTopBar = true
+hideMenuItems = true
