--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,5 +1,6 @@
 [postgres]
-host = "207.248.3.211"
+host = "warehouse.prizesuperfruit.com"
 dbname = "postgres"
-user = "pe_data"
-password = "pe_data123"
+user = "pe_data_ssl"
+password = "R9!mK3$ZqE72T#vP2A8xW"
+
